* XAL and ODS buttons are now disabled if prereqs are missing (Erik H)
* Experimental support for migrating from SQL-Ledger via Setup.pl (Chris T)
* Fixed POD issues with lsmb-request.pl (h/t Robert C) (Chris T item 3472648)
* Fixed means of adding parts/editing pricelist missing (Chris T, bug 3442163)
* Fixed unknown db detected as SQL-Ledger (Chris T, bug 3510039)

Andres B is Andres Basile

Changelog for 1.3.13
* Reduced log messages when upgrading/creating db, for some log levels (Chris T)
* Changed db setup not to use createdb for simple admin of pg_hba.conf (Chris T)
* Corrected type = 'password' not handled properly in elements.html (Chris T)
* Non-billable information now retained in db for timecards (Chris T)
* Corrected character encoding/corruption issue with backup scripts (Chris T)
* Changes in the single payment UI to minimize mouse movements (Erik H)
* Adding link to employee edit screen from user page (h/t H Sorli) (Chris T)
* Fixed: Can't designate managers (Chris T, bug  3486840)
* Can now skip adding the chart of accounts (Erik H)
* Fixed: can't reconcile accounts in foreign currency (bug 3498036)(Chris T)
* Fixed: Recon not setup for cash accounts in default COA (Erik H and Chris T)
* Corrected minor issue with demo sales quotation template (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
H Sorli is Havard Sorli

Changelog for 1.3.12
* Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
* Corrected handling of accounts in dropdowns where () are present (Chris T)
* Corrected erroneous log messages from debugging 1.3.11 (Chris T)
* Autocomplete ajaxselect now work (degraded) without Javascript (Chris T)
* Autocomplete ajaxselect now accept full entry without waiting (Chris T)
* Inlined add_custom_field's argument names for autodocumentation (Chris T)
* Updated add_custom_field to run on PostgreSQL 9.0 (Chris T)
* Updated dists/rpm/build.sh to support RHEL 5 (Hilton D)